@@ -1,3 +1,6 @@
+* xxx
+  - Always serialize required fields
+
 * 0.19.1
   - Fix warning about duplicate keys (thanks to https://github.com/ananthakumaran)
 
